Fix: Set background high opacity due to supported backdrop-filter on Firefox

--- a/src/app/drop/drop.module.css
+++ b/src/app/drop/drop.module.css
@@ -14,3 +14,9 @@
 
 	pointer-events: none;
 }
+
+@supports not (backdrop-filter: blur(20px)) {
+	.container {
+		background-color: rgba(var(--bg-color-rgb), 0.98);
+	}
+}
